--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 <body>
     <div id="filtros">
         <button id="tudo" class="but active" onClick="filterSelection('all')"> Todos</button>
-        <button id="coding" class="but" onClick="filterSelection('coding')"> Coding </button>
-        <button id="interacao" class="but" onClick="filterSelection('interação')"> Interação</button>
+        <button id="interacao" class="but" onClick="filterSelection('interação')"> Interativo</button>
         <button id="tipo" class="but" onClick="filterSelection('tipografia')"> Tipografia</button>
-        <button id="web" class="but" onClick="filterSelection('web')"> Web</button>
+        <button id="web" class="but" onClick="filterSelection('web')"> Web De(v/sign)</button>
         <button id="video" class="but" onClick="filterSelection('vídeo')">Vídeo </button>
-        <button id="som" class="but" onClick="filterSelection('design-de-som')">Design de Som</button>
+        <button id="designgrafico" class="but" onClick="filterSelection('designgrafico')">Design Gráfico</button>
+        <button id="fotografia" class="but" onClick="filterSelection('fotografia')">Fotografia</button>
+
       </div>
       <div id="openproj">
           <a class="close" onClick="closeProj()"></a>
@@ -57,8 +58,10 @@
 
             <section id="intro">
                 <div id="intro-cont">
-                <h1>this is not a pdf portfolio</h1>
-                <p>é um website, porque websites são mais divertidos que pdf's </p>
+                <h1>o meu (não PDF) portfólio</h1>
+                <h2>sobre mim</h2>
+                <p>Licenciada em Design e Multimédia, com grande interesse por desenvolvimento web (front-end) e interação multimédia. </br>
+                    Motivada pelo desafio e resolução de problemas que envolvam lógica, o que desperta curiosidade em áreas como  desenvolvimento back-end. </br>O design gráfico é menos presente, mas quando surge e resulta em algo bem conseguido é quando existe total liberdade criativa, dando sempre maior importância ao conceptual do que ao “bonito”. </p>
                 </div>
             </section>
 
